<?xml version="1.0"?>
<package>
  <name>morus_gui</name>
  <version>0.0.0</version>
  <description>Morus GUI</description>
  <maintainer email="lovro.markovic@fer.hr">bruno</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>