<package>
  <name>morus_msgs</name>
  <version>1.0.0</version>
  <description>Package containing messages for morus UAV simulator </description>

  <maintainer email="tomislav.haus@fer.hr">Tomislav Haus</maintainer>

  <license>ASL 2.0</license>

  <author>Tomislav Haus</author>
  <author>Matko Orsag</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
